# zen-neural-stack

./: .gitignore  AI_ROADMAP.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_VALIDATION_REPORT.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_STRATEGY.md  DEVELOPMENT_GUIDE.md  DISTRIBUTED_ARCHITECTURE.md  Dockerfile.zen-compute  Dockerfile.zen-forecasting  Dockerfile.zen-orchestrator  GPU_BACKEND_USAGE.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_TEST_COMPLETION_REPORT.md  LATEST_VERSION_VALIDATION_REPORT.md  MIGRATION_PLAN.md  NEURAL_ASSETS_INVENTORY.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_OPTIMIZATION_STRATEGY.md  README.md  RELEASE_NOTES_v1.0.md  SECURITY_FIX_REPORT.md  SECURITY_VALIDATION_REPORT.md  SETUP_COMPLETE.md  SWARM_OPTIMIZATION_VALIDATION_REPORT.md  USAGE_EXAMPLES.md  code-mesh-mcp-config.json  docker-compose.production.yml  justfile  test_agent_implementation.rs
tests/: Cargo.toml  README.md  ci_cd_pipeline.sh  integration_test_runner.rs  lib.rs  mod.rs
tests/common/: mod.rs
tests/e2e/: complete_training_workflow.rs  mod.rs
tests/integration/: dnn_training_integration.rs  gnn_dnn_compatibility.rs  mod.rs  simd_memory_integration.rs
tests/performance/: memory_performance.rs  mod.rs
tests/regression/: mod.rs
zen-compute/: .eslintrc.js  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
zen-compute/benches/: kernel_benchmarks.rs  memory_benchmarks.rs  performance_benchmarks.rs  regression_benchmarks.rs  transpiler_benchmarks.rs  wasm_vs_native_benchmarks.rs
zen-compute/cli/: index.js
zen-compute/demo/: demo.js
zen-compute/examples/: vector_add.rs
zen-compute/src/: lib.rs  prelude.rs
zen-compute/src/backend/: native_gpu.rs  wasm_runtime.rs  webgpu_optimized.rs
zen-compute/src/kernel/: mod.rs
zen-compute/src/memory/: device_memory.rs  host_memory.rs  memory_pool.rs  mod.rs  unified_memory.rs
zen-compute/src/neural_integration/: benchmarks.rs  bridge.rs  mod.rs  wasm_bindings.rs
zen-compute/src/parser/: ast.rs  cuda_parser.rs
zen-compute/src/profiling/: mod.rs  performance_monitor.rs
zen-compute/src/runtime/: device.rs  grid.rs  kernel.rs  mod.rs
zen-compute/src/transpiler/: code_generator.rs  kernel_translator.rs  mod.rs  tests.rs  wgsl.rs
zen-compute/tests/: browser_tests.rs  cross_platform_tests.rs  integration_tests.rs  memory_safety_tests.rs  memory_tests.rs  parser_tests.rs  property_tests.rs  runtime_tests.rs  transpiler_tests.rs
zen-forecasting/: Cargo.toml
zen-forecasting/benches/: inference_benchmarks.rs  training_benchmarks.rs
zen-forecasting/examples/: advanced_features.rs  complete_workflow.rs  ensemble_forecasting.rs
zen-forecasting/neuro-divergent-core/: Cargo.toml
zen-forecasting/neuro-divergent-core/src/: config.rs  data.rs  error.rs  integration.rs  lib.rs  traits.rs
zen-forecasting/neuro-divergent-data/: Cargo.toml
zen-forecasting/neuro-divergent-data/src/: features.rs  lib.rs
zen-forecasting/neuro-divergent-models/: Cargo.toml
zen-forecasting/neuro-divergent-models/src/: data.rs  forecasting.rs  utils.rs
zen-forecasting/neuro-divergent-registry/: Cargo.toml
zen-forecasting/neuro-divergent-registry/src/: discovery.rs  factory.rs  lib.rs  plugin.rs  registry.rs
zen-forecasting/neuro-divergent-training/: Cargo.toml
zen-forecasting/src/: builders.rs  errors.rs  lib.rs  neural_forecast.rs  results.rs
zen-forecasting/tests/: lib.rs
zen-forecasting/tests/integration/: api_compatibility_tests.rs  cross_validation_tests.rs  ensemble_tests.rs  mod.rs  persistence_tests.rs  preprocessing_tests.rs  workflow_tests.rs
zen-forecasting/tests/performance/: memory_tests.rs  scaling_tests.rs
zen-forecasting/tests/stress/: concurrent_usage_tests.rs  large_dataset_tests.rs  resource_limit_tests.rs
zen-forecasting/tests/unit/: core_tests.rs  data_tests.rs  registry_tests.rs  training_tests.rs
zen-neural/: BENCHMARKING_EXECUTION_GUIDE.md  Cargo.toml  GNN_STORAGE_INTEGRATION.md  GPU_ACCELERATION.md  PERFORMANCE_BENCHMARKING_REPORT.md  QUALITY_VALIDATION_REPORT.md  cascade.rs  errors.rs  feature_comparison.md  integration.rs  lib.rs  memory_manager.rs  network.rs
zen-neural/benches/: baseline_js_comparison.rs  comprehensive_performance_benchmarks.rs  dnn_performance_benchmarks.rs  memory_profiling_benchmarks.rs  simd_optimization_benchmarks.rs
zen-neural/examples/: dnn_complete_example.rs  gnn_complete_example.rs  gnn_demo.rs  gnn_gpu_benchmark.rs  simd_performance_demo.rs  simple_demo.rs
zen-neural/io/: fann_format.rs
zen-neural/scripts/: performance_monitoring_dashboard.py  run_comprehensive_benchmarks.sh
zen-neural/simd/: benchmarks.rs  matrix_ops.rs  memory_layout.rs  mod.rs  training_integration.rs  vector_ops.rs
zen-neural/src/benchmarking/: mod.rs
zen-neural/src/distributed/: mod.rs
zen-neural/src/dnn/: activations.rs  concurrent.rs  data.rs  gpu.rs  layers.rs  (+5 more)
zen-neural/tests/: dnn_integration_simple.rs  dnn_integration_tests.rs  gnn_integration_tests.rs  mod.rs  network_tests.rs
zen-neural/training/: gpu_backprop.rs  gpu_batch_training.rs  gpu_optimized_training.rs  gpu_training.rs  mod.rs
zen-neural/webgpu/: backend.rs  compute_context.rs  device.rs  error.rs  memory.rs  mod.rs  webgpu_backend.rs
zen-orchestrator/: Cargo.toml  lib.rs
zen-orchestrator/.claude/: settings.json
zen-orchestrator/examples/: wasm_swarm_demo.js
zen-orchestrator/npm/: audit-before-axios-fix.json  package-lock.json  package.json  test-db-updates.js  test-flags.js  test-mcp-db.js  test-mcp-fixes.js  test-mcp-persistence.js  test-pr34-local.js  verify-db-updates.js
zen-swarm/: CLAUDE_CODE_LLM_PLUGINS.md  CLAUDE_HOOKS_INTEGRATION.md  Cargo.toml  DIRECT_CLI_LLM_INTEGRATION.md  SWARM_DAEMON_ARCHITECTURE.md  SWARM_TASK_EXECUTION.md
zen-swarm-provider/: Cargo.toml
zen-swarm-provider/src/: lib.rs
zen-swarm/src/: a2a.rs  a2a_client.rs  agent.rs  config.rs  core.rs  daemon.rs  error.rs  events.rs  graph.rs  lib.rs  lifecycle.rs  mcp.rs  mcp_stdio.rs  neural.rs  openapi.rs  persistence.rs  persistence_cozo.rs  plugins.rs  runtime.rs  task.rs  types.rs  unified_database.rs  vector.rs
(+162 files in other folders)
