[workspace]
resolver = "2"
members = [
    "zen-neural",
    "zen-forecasting", 
    "zen-compute",
    "zen-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["mikkihugo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mikkihugo/zen-neural-stack"

[workspace.dependencies]
# Shared dependencies across all zen-* crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"
num-traits = "0.2"
ndarray = "0.15"

# Neural network specific
nalgebra = "0.34"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# GPU acceleration 
wgpu = "0.19"
candle-core = "0.3"
candle-nn = "0.3"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"  # Optimize for size
strip = true

[profile.wasm-size]
inherits = "release"
opt-level = "z"        # Optimize for size
lto = "fat"           # Full LTO for dead code elimination
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip symbols for size
panic = "abort"       # Smaller panic handler
overflow-checks = false

[profile.wasm-perf]
inherits = "release"
opt-level = 3         # Maximum performance
lto = "fat"          # Full LTO for inlining
codegen-units = 1    # Single codegen unit
debug = false        # No debug info
panic = "abort"      # Smaller panic handler
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
lto = "thin"
panic = "abort"

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
debug = true