[package]
name = "zen-neural-stack-tests"
version = "0.1.0"
edition = "2024"
authors = ["zen-neural-stack team"]
description = "Comprehensive integration testing suite for zen-neural-stack"

[[bin]]
name = "integration_test_runner"
path = "integration_test_runner.rs"

[dependencies]
# Core zen-neural-stack dependencies
zen-neural = { path = "../zen-neural" }
zen-forecasting = { path = "../zen-forecasting" }
zen-compute = { path = "../zen-compute" }

# Testing framework dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
lazy_static = "1.4"
env_logger = "0.10"
log = "0.4"

# Data manipulation
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Random number generation for test data
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Async runtime for async tests
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "macros", "fs", "sync"] }
futures = "0.3"

# Test utilities
approx = "0.5"
pretty_assertions = "1.4"
anyhow = "1.0"
thiserror = "1.0"

# Performance monitoring
criterion = { version = "0.5", features = ["html_reports"] }

# Memory monitoring (optional)
jemalloc-ctl = { version = "0.5", optional = true }

# GPU testing (optional)
wgpu = { version = "0.19", optional = true }

[features]
default = ["memory-monitoring"]
memory-monitoring = ["dep:jemalloc-ctl"]
gpu-tests = ["dep:wgpu", "zen-neural/gpu", "zen-compute/webgpu"]

[dev-dependencies]
proptest = "1.4"