[package]
name = "zen-neural-stack-tests"
version = "0.1.0"
edition = "2024"
authors = ["zen-neural-stack team"]
description = "Comprehensive integration testing suite for zen-neural-stack"

[[bin]]
name = "integration_test_runner"
path = "integration_test_runner.rs"

[dependencies]
# Core zen-neural-stack dependencies
zen-neural = { path = "../zen-neural" }
zen-forecasting = { path = "../zen-forecasting" }
zen-compute = { path = "../zen-compute" }

# Testing framework dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.20.2"
lazy_static = "1.5.0"
env_logger = "0.11.6"
log = "0.4.27"

# Data manipulation
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"

# Random number generation for test data
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"

# Async runtime for async tests
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "macros", "fs", "sync"] }
futures = "0.3.31"

# Test utilities
approx = "0.5.1"
pretty_assertions = "1.4.1"
anyhow = "1.0.98"
thiserror = "2.0.12"

# Performance monitoring
criterion = { version = "0.5.1", features = ["html_reports"] }

# Memory monitoring (optional)
jemalloc-ctl = { version = "0.5.4", optional = true }

# GPU testing (optional)
wgpu = { version = "26.0.1", optional = true }

[features]
default = ["memory-monitoring"]
memory-monitoring = ["dep:jemalloc-ctl"]
gpu-tests = ["dep:wgpu", "zen-neural/gpu", "zen-compute/webgpu"]

[dev-dependencies]
proptest = "1.7.0"