# Part of zen-neural-stack workspace

[package]
name = "zen-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Decentralized Autonomous Agent orchestration with THE COLLECTIVE coordination for zen-neural-stack"
readme = "README.md"
keywords = ["neural-network", "wasm", "swarm", "ai", "mcp", "zen-orchestrator", "collective", "daa"]
categories = ["algorithms", "science", "wasm", "web-programming"]

[dependencies]
# Async runtime (WASM-compatible subset)
tokio = { version = "1.40", features = ["sync", "macros", "time", "rt", "rt-multi-thread"], default-features = false }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Random number generation  
getrandom = { version = "0.2", default-features = false }
rand = { workspace = true, features = ["small_rng"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Collections and utilities
dashmap = "6.0"
futures = { version = "0.3", default-features = false, features = ["executor"] }
pin-project = "1.1"
parking_lot = "0.12"

# No-std support
no-std-compat = { version = "0.4", features = ["alloc"] }
heapless = "0.8"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window"] }
# wee_alloc removed due to security vulnerability GHSA-rc23-xxgq-x27g

# MCP dependencies
axum = "0.7"
tower = "0.4"
tokio-tungstenite = "0.23"
schemars = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Transport dependencies
tungstenite = "0.27"
shared_memory = "0.12"

# Persistence dependencies
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

[dev-dependencies]
# Development dependencies
criterion = "0.5"
proptest = "1.0"

# Profile configurations moved to workspace root


